updated my files

--- a/pieChart/index.html
+++ b/pieChart/index.html
@@ -9,6 +9,6 @@
 <body>
     <canvas id="pieChart" width="400" height="400"></canvas>
 
-    <script type="module" src="pieChart.js"></script>
+    <script src="pieChart.js"  defer ></script>
 </body>
 </html>
