--- a/barGraph/index.html
+++ b/barGraph/index.html
@@ -9,6 +9,6 @@
 <body>
     <canvas id="barGraph" width="600" height="400"></canvas>
 
-    <script type="module" src="barGraph.js"></script>
+    <script src="barGraph.js" defer ></script>
 </body>
 </html>
