Modified the structures

--- a/barGraph/index.html
+++ b/barGraph/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bar Graph</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <canvas id="barGraph" width="600" height="400"></canvas>
-
     <script src="barGraph.js" defer ></script>
+</head>
+
+<body>
+    <h1>Sedibelo Kgabo Mining- BarGraph</h1>
+    <canvas id="barGraph" width="400" height="400"></canvas>
 </body>
+
+<marque>Created by Tshireletso Mpudu</marque>
 </html>
