--- a/pieChart/index.html
+++ b/pieChart/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pie Chart</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="pieChart.js"  defer ></script>
 </head>
 <body>
     <canvas id="pieChart" width="400" height="400"></canvas>
+    <h1>Sedibelo Kgabo Mining- Pie Chart</h1>
 
-    <script src="pieChart.js"  defer ></script>
 </body>
+
+<footer>Created by Tshireletso Mpudu</footer>
 </html>
